--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -124,6 +124,7 @@
                                             <input style="border-radius: 50px;background-color: rgb(255, 255, 255);" type="file" class="form-control" id="profile_photo" name="profile_photo">
                                         </div>
                                         <div class="col-12 mb-3">
+                                            <label for="bio">Bio</label>
                                             <textarea style="border-radius: 10px;background-color: rgb(255, 255, 255);" name="bio" class="form-control" maxlength="800" required id="bio" cols="55" rows="5" placeholder='{{profile.bio}}'></textarea>
                                         </div>
                                         <div class="col-12 mb-3">
